example_oledScreen/build/log/idf_py_stdout_output_15300
[1/12] Building C object esp-idf/screenOLED/CMakeFiles/__idf_screenOLED.dir/screenOLED.c.obj
FAILED: esp-idf/screenOLED/CMakeFiles/__idf_screenOLED.dir/screenOLED.c.obj 
/home/aspect/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.4.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/aspect/esp/example_oledScreen/build/config -I/home/aspect/esp/esp-idf/components/screenOLED/include -I/home/aspect/esp/esp-idf/components/newlib/platform_include -I/home/aspect/esp/esp-idf/components/freertos/config/include -I/home/aspect/esp/esp-idf/components/freertos/config/include/freertos -I/home/aspect/esp/esp-idf/components/freertos/config/xtensa/include -I/home/aspect/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/aspect/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/aspect/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/aspect/esp/esp-idf/components/freertos/esp_additions/include -I/home/aspect/esp/esp-idf/components/esp_hw_support/include -I/home/aspect/esp/esp-idf/components/esp_hw_support/include/soc -I/home/aspect/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/aspect/esp/esp-idf/components/esp_hw_support/dma/include -I/home/aspect/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/aspect/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/home/aspect/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/aspect/esp/esp-idf/components/esp_hw_support/port/esp32/include -I/home/aspect/esp/esp-idf/components/heap/include -I/home/aspect/esp/esp-idf/components/heap/tlsf -I/home/aspect/esp/esp-idf/components/log/include -I/home/aspect/esp/esp-idf/components/soc/include -I/home/aspect/esp/esp-idf/components/soc/esp32 -I/home/aspect/esp/esp-idf/components/soc/esp32/include -I/home/aspect/esp/esp-idf/components/soc/esp32/register -I/home/aspect/esp/esp-idf/components/hal/platform_port/include -I/home/aspect/esp/esp-idf/components/hal/esp32/include -I/home/aspect/esp/esp-idf/components/hal/include -I/home/aspect/esp/esp-idf/components/esp_rom/include -I/home/aspect/esp/esp-idf/components/esp_rom/esp32/include -I/home/aspect/esp/esp-idf/components/esp_rom/esp32/include/esp32 -I/home/aspect/esp/esp-idf/components/esp_rom/esp32 -I/home/aspect/esp/esp-idf/components/esp_common/include -I/home/aspect/esp/esp-idf/components/esp_system/include -I/home/aspect/esp/esp-idf/components/esp_system/port/soc -I/home/aspect/esp/esp-idf/components/esp_system/port/include/private -I/home/aspect/esp/esp-idf/components/xtensa/esp32/include -I/home/aspect/esp/esp-idf/components/xtensa/include -I/home/aspect/esp/esp-idf/components/xtensa/deprecated_include -I/home/aspect/esp/esp-idf/components/lwip/include -I/home/aspect/esp/esp-idf/components/lwip/include/apps -I/home/aspect/esp/esp-idf/components/lwip/include/apps/sntp -I/home/aspect/esp/esp-idf/components/lwip/lwip/src/include -I/home/aspect/esp/esp-idf/components/lwip/port/include -I/home/aspect/esp/esp-idf/components/lwip/port/freertos/include -I/home/aspect/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/aspect/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/aspect/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/aspect/esp/esp-idf/components/driver/deprecated -I/home/aspect/esp/esp-idf/components/driver/i2c/include -I/home/aspect/esp/esp-idf/components/driver/touch_sensor/include -I/home/aspect/esp/esp-idf/components/driver/twai/include -I/home/aspect/esp/esp-idf/components/driver/touch_sensor/esp32/include -I/home/aspect/esp/esp-idf/components/esp_pm/include -I/home/aspect/esp/esp-idf/components/esp_ringbuf/include -I/home/aspect/esp/esp-idf/components/esp_driver_gpio/include -I/home/aspect/esp/esp-idf/components/esp_driver_pcnt/include -I/home/aspect/esp/esp-idf/components/esp_driver_gptimer/include -I/home/aspect/esp/esp-idf/components/esp_driver_spi/include -I/home/aspect/esp/esp-idf/components/esp_driver_mcpwm/include -I/home/aspect/esp/esp-idf/components/esp_driver_ana_cmpr/include -I/home/aspect/esp/esp-idf/components/esp_driver_i2s/include -I/home/aspect/esp/esp-idf/components/esp_driver_sdmmc/include -I/home/aspect/esp/esp-idf/components/sdmmc/include -I/home/aspect/esp/esp-idf/components/esp_driver_sdspi/include -I/home/aspect/esp/esp-idf/components/esp_driver_sdio/include -I/home/aspect/esp/esp-idf/components/esp_driver_dac/include -I/home/aspect/esp/esp-idf/components/esp_driver_rmt/include -I/home/aspect/esp/esp-idf/components/esp_driver_tsens/include -I/home/aspect/esp/esp-idf/components/esp_driver_sdm/include -I/home/aspect/esp/esp-idf/components/esp_driver_i2c/include -I/home/aspect/esp/esp-idf/components/esp_driver_uart/include -I/home/aspect/esp/esp-idf/components/vfs/include -I/home/aspect/esp/esp-idf/components/esp_driver_ledc/include -I/home/aspect/esp/esp-idf/components/esp_driver_parlio/include -I/home/aspect/esp/esp-idf/components/esp_driver_usb_serial_jtag/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/aspect/esp/example_oledScreen=. -fmacro-prefix-map=/home/aspect/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/screenOLED/CMakeFiles/__idf_screenOLED.dir/screenOLED.c.obj -MF esp-idf/screenOLED/CMakeFiles/__idf_screenOLED.dir/screenOLED.c.obj.d -o esp-idf/screenOLED/CMakeFiles/__idf_screenOLED.dir/screenOLED.c.obj -c /home/aspect/esp/esp-idf/components/screenOLED/screenOLED.c
/home/aspect/esp/esp-idf/components/screenOLED/screenOLED.c: In function 'OLEDscreen_clear':
/home/aspect/esp/esp-idf/components/screenOLED/screenOLED.c:79:16: error: implicit declaration of function 'ssd1306_display' [-Wimplicit-function-declaration]
   79 |         return ssd1306_display();
      |                ^~~~~~~~~~~~~~~
[2/12] Performing build step for 'bootloader'
[1/1] cd /home/aspect/esp/example_oledScreen/build/bootloader/esp-idf/esptool_py && /home/aspect/.espressif/python_env/idf5.4_py3.13_env/bin/python /home/aspect/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/aspect/esp/example_oledScreen/build/bootloader/bootloader.bin
Bootloader binary size 0x6580 bytes. 0xa80 bytes (9%) free.
[3/12] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/example_oledScreen.c.obj
ninja: build stopped: subcommand failed.
